testsuite/tests/gnatcheck_errors/generic_inst_walking/test.adb
procedure Test is
   package I is new PP (4);
begin
   null;
end;
